--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,31 @@
-h1 {
-  color: rgb(18, 201, 192);
+.App {
+  text-align: left;
 }
 
-h3 {
-  font-style: italic;
+.App-logo {
+  height: 5vmin;
 }
 
-#itemList {
-  padding: 0;
+.App-header {
+  background-color:purple;
+  min-height: 20vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
+
+.App-link {
+  color: #9a09d3;
+}
+
+body {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
+ padding-bottom: 20px;
+ padding-top:20px ;
+};
